	Fixed slapo-syncprov psearch flush in qtask
	Fixed slapo-syncprov abandon checks
	Fixed slapo-unique ignore writes not under unique_base (ITS#4066)
	Fixed slapo-valsort unknown valsort-attr bug (ITS#4047)
	Fixed slapcat out-of-memory problem (ITS#4010)
	Fixed slurpd unrecognized slave names bug (ITS#4012)
	Fixed liblber dgram len bug (ITS#4046)
	Fixed libldap SASL and TLS potential ld_error leaks (ITS#4064)
	Fixed liblutil/csn time counter issue 
	Updated contrib/ldapc++ to avoid deprecated functions
	Documentation
		Added slapo-valsort(5) man page (ITS#3994)
		Added slap tool -F option documentation (ITS#4026)
	Build Environment
		Fixed misc POSIX conformance issues (ITS#2667)
		Fixed --without-threads build issue (ITS#4006)
		Fixed test script exit checks (ITS#4045)
		Added test suite parameterized directory support
		Fixed test suite tool error handling
		Updated contrib/ldapc++ build environment

OpenLDAP 2.3.7 Release
	Updated slapd ManageDIT support
	Updated slapd ACI syntax checking (ITS#3877)
	Fixed slapd STATS2 referral logging
	Refixed slapd cn=config default search base bug (ITS#3900)
	Fixed slapd cn=config TLSVerifyClient bug (ITS#3962)
	Fixed slapd winsock assert (ITS#3983)
	Fixed slapd-bdb/hdb paged results deadlock (ITS#3940)
	Fixed slapd-bdb/hdb/ldbm searchBase disclose (ITS#3964)
	Fixed slapd-bdb/hdb bi_dbenv check (ITS#3992)
	Fixed slapd-meta generic attribute normalize/pretty (ITS#3956)
	Fixed slapd-ldap/meta 'undefined' attribute mutex protection (ITS#3958)
	Added slapd-ldap/meta 'proxied' attribute support (ITS#3959)
	Fixed slapd-meta no candidate target selected bug (ITS#3990)
	Fixed slapd-meta matchedDN handling (ITS#3944)
	Fixed slapd-monitor hiding issue (ITS#3986)
	Fixed slapo-ppolicy lockout status at Bind (ITS#3946)
	Moved slapo-glue into slapd core
	Fixed slaptest cn=config segfault (ITS#3961)
	Fixed slaptools logging issue (ITS#3937)
	Fixed slaptools fails after db clean (ITS#3970)
	Fixed slaptools reject unsupported -w (ITS#3939)